# rust_polygon_arbitrage_bot

./: .env.example  .gitignore  Cargo.toml  README.md  opportunities.jsonl
.cargo/: config.toml
benches/: cycle_filter.rs  cycle_finder.rs  hf_tick.rs  local_sim.rs  negative_cycle.rs  scaling.rs  spot_price.rs
doc/: ARCHITECTURE.md  MEMORIES.md
external_gateway/: secret_hash.txt
external_gateway/registration_only/: external_gateway_cert.pem  external_gateway_key.pem
graphify-out/: .graphify_manifest.json  GRAPH_REPORT.md  graph.cypher  graph.graphml  graph.html  graph.json
graphify-out/html/: community_0.html  community_1.html  community_10.html  community_100.html  community_101.html  community_102.html  community_103.html  community_104.html  community_105.html  community_106.html  community_107.html  community_108.html  community_109.html  community_11.html  community_110.html  community_111.html  community_112.html  community_113.html  community_114.html  community_115.html  community_116.html  community_117.html  community_118.html  community_119.html  community_12.html  community_120.html  community_121.html  community_122.html  community_123.html  community_124.html  community_125.html  community_126.html  community_127.html  community_128.html  community_129.html  community_13.html  community_130.html  community_131.html  community_132.html  community_133.html  (+162 more)
graphify-out/obsidian/: ActiveGraph.md  Alert.md  AlertLevel.md  App.md  AppConfig.md  ArbError.md  ArenaInner.md  Args.md  AssessProfitInput.md  BalanceRow.md  BalancerEncoder.md  BalancerPoolKind.md  BalancerPoolState.md  BotStatus.md  BuiltArbTx.md  CachedEntry.md  CachedLiquidity.md  CallKind.md  CalldataHop.md  CandidateBuildConfig.md  CandidateExecution.md  CircuitBreaker.md  Collector.md  ConcentratedLiquidityPoolState.md  ConfigSnapshot.md  CurveEncoder.md  CurvePoolState.md  CycleBudget.md  CycleFinderKind.md  CycleSearchPass.md  Edge.md  (+2300 more)
src/: abis.rs  debug_agent.rs  error.rs  lib.rs  main.rs  util.rs
tests/: calldata_parity.rs
(+585 files in other folders)
