cargo-features = ["codegen-backend"]
[package]
name = "rpbot"
version = "0.1.0"
edition = "2024"
default-run = "rpbot"

[lib]
name = "rpbot"
path = "src/lib.rs"

[[bin]]
name = "rpbot"
path = "src/main.rs"

[[bin]]
name = "flame_profile"
path = "src/bin/flame_profile.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
trace-sim = []

[dependencies]
alloy = { version = "2.1.0", features = ["provider-ws", "pubsub"] }
anyhow = "1.0.102"
arc-swap = "1.9.1"
thiserror = "2"
dashmap = "6.1.0"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.31"
hex = "0.4.3"
hypersync-client = "1.3.0"
parking_lot = "0.12.5"
reqwest = { version = "0.13.4", features = ["json"] }
ruint = { version = "1.18.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rustc-hash = "2.1.2"
rayon = "1.12.0"
smallvec = "1.15.1"
num_cpus = "1.17.0"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
console-subscriber = { version = "0.5.0", optional = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
ratatui = { version = "0.30.2", optional = true }
crossterm = { version = "0.29.0", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "cycle_finder"
harness = false

[[bench]]
name = "local_sim"
harness = false

[[bench]]
name = "spot_price"
harness = false

[[bench]]
name = "hf_tick"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
# cranelift breaks linking with aws-lc-sys (rustls/hypersync); use default LLVM backend
# codegen-backend = "cranelift"
